--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -8,7 +8,7 @@
 		"title": "{{appTitle}}",
 		"description": "{{appDescription}}",
 		"applicationVersion": {
-	  	"version": "1.0.0"
+	  		"version": "1.0.0"
 		}
   },
   "sap.ui": {
@@ -38,6 +38,10 @@
 				"settings": {
 					"bundleName": "app.i18n.i18n"
 				}
+			},
+			"invoice": {
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "Invoices.json"
 			}
 		},
 		"resources": {
