--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -44,6 +44,35 @@
 				"uri": "Invoices.json"
 			}
 		},
+		"routing": {
+		"config": {
+			"routerClass": "sap.m.routing.Router",
+			"viewType": "XML",
+			"viewPath": "app.view",
+			"controlId": "app",
+			"controlAggregation": "pages"
+		},
+		"routes": [
+			{
+				"pattern": "",
+				"name": "overview",
+				"target": "overview"
+			},
+			{
+				"pattern": "detail/{invoicePath}",
+				"name": "detail",
+				"target": "detail"
+			}
+		],
+		"targets": {
+			"overview": {
+				"viewName": "Overview"
+			},
+			"detail": {
+				"viewName": "Detail"
+			}
+		}
+		},
 		"resources": {
 			"css": [
 				{
